# isophine

./: CMakeLists.txt  README.md  cmakelists.bak
src/: CMakeLists.txt  main.cpp
src/dashboard/: CMakeLists.txt  dashboard.cpp  dashboard.h  dashboard.ui
src/editor/: CMakeLists.txt  isophine_editor.cpp  isophine_editor.h  isophine_editor.ui  pageviewer.cpp  pageviewer.h  project_settings.h  renderer.cpp  renderer.h
src/widgets/: CMakeLists.txt  superspinbox.cpp  superspinbox.h
src/widgets/card/: CMakeLists.txt  projectcard.cpp  projectcard.h  projectcard.ui
src/widgets/dialogs/: CMakeLists.txt  appsettingsdialog.cpp  appsettingsdialog.h  appsettingsdialog.ui  buttondialogs.cpp  buttondialogs.h  messageboxes.cpp  messageboxes.h  newprojectdialog.cpp  newprojectdialog.h  newprojectdialog.ui  openprojectdialog.cpp  openprojectdialog.h  openprojectdialog.ui  projsettingsdialog.cpp  projsettingsdialog.h  projsettingsdialog.ui
src/widgets/spinbox/: CMakeLists.txt  superspinbox.h
